<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CMStats</string>

    <!-- Main -->
    <string name="main_title">Anonymous Usage Data</string>
    <string name="main_desc">Opt-ing in to anonymous usage data submission
        allows
        the developers of CyanogenMod to track unique installations
        across
        devices. Information submitted includes a unique identifier,
        which
        does not compromise your privacy, device type and version
        information.
        Data is submitted on each device boot, for an example of 
        data that is
        sent, please click Preview below.</string>
    <string name="main_optin">Enable Reporting</string>
    <string name="main_btn_preview">Preview Data</string>
    <string name="main_btn_save">Save Preference</string>
    <string name="main_show_stats">View Stats</string>

    <!-- Preview -->
    <string name="preview_id_lbl">Unique ID</string>
    <string name="preview_device_lbl">Device</string>
    <string name="preview_version_lbl">Version</string>
    <string name="preview_done_btn">Done</string>
    <string name="preview_country_lbl">Country</string>
    <string name="preview_carrier_lbl">Carrier</string>

    <!-- Notification -->
    <string name="notification_ticker">Statistics Opted-In</string>
    <string name="notification_title">CyanogenMod Statistics</string>
    <string name="notification_desc">Enable or Disable Anonymous Statistics</string>
    <string name="main_link">&lt;a href=&quot;http://www.cyanogenmod.com/blog/cmstats-what-it-is-and-why-you-should-opt-in&quot;&gt;Learn More&lt;/a&gt;</string>
</resources>
