<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:orientation="vertical"
        android:layout_weight="1" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/main_desc" android:id="@+id/main_desc"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:padding="15dip" android:textColor="#FFFFFF"></TextView>
        <TextView android:text="@string/main_link" android:id="@+id/main_link"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:padding="15dip" android:textColor="#FFFFFF"></TextView>
        <CheckBox android:text="@string/main_optin" android:id="@+id/main_optin"
            android:layout_height="wrap_content" android:layout_width="fill_parent"
            android:layout_margin="5dip"></CheckBox>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:gravity="center"
        android:padding="5dip" android:background="@android:drawable/bottom_bar">
        <Button android:id="@+id/main_btn_save" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/main_btn_save"
            android:layout_weight="1"></Button>
        <Button android:id="@+id/main_btn_preview"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/main_btn_preview" android:layout_weight="1"></Button>
        <Button android:id="@+id/main_show_stats" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/main_show_stats"
            android:layout_weight="1"></Button>
    </LinearLayout>
</LinearLayout>
